crates/pardosa-genome/tests/compile_fail/btreemap_box_key.stderr
error[E0277]: the trait bound `Box<String>: GenomeOrd` is not satisfied
 --> tests/compile_fail/btreemap_box_key.rs:8:11
  |
8 |     data: BTreeMap<Box<String>, u32>,
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `GenomeOrd` is not implemented for `Box<String>`
  |
  = help: the following other types implement trait `GenomeOrd`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
  = note: required for `BTreeMap<Box<String>, u32>` to implement `GenomeSafe`

error[E0277]: the trait bound `Box<String>: Encode` is not satisfied
 --> tests/compile_fail/btreemap_box_key.rs:6:10
  |
6 | #[derive(GenomeSafe)]
  |          ^^^^^^^^^^ the trait `Encode` is not implemented for `Box<String>`
  |
  = help: the following other types implement trait `Encode`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0,)
            BTreeMap<K, V>
            Container
            Option<T>
          and $N others
  = note: required for `BTreeMap<Box<String>, u32>` to implement `Encode`
  = note: this error originates in the derive macro `GenomeSafe` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Box<String>: Decode` is not satisfied
 --> tests/compile_fail/btreemap_box_key.rs:8:11
  |
8 |     data: BTreeMap<Box<String>, u32>,
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Decode` is not implemented for `Box<String>`
  |
  = help: the following other types implement trait `Decode`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0,)
            BTreeMap<K, V>
            Container
            Option<T>
          and $N others
  = note: required for `BTreeMap<Box<String>, u32>` to implement `Decode`

error[E0277]: the trait bound `Box<String>: Encode` is not satisfied
 --> tests/compile_fail/btreemap_box_key.rs:8:11
  |
8 |     data: BTreeMap<Box<String>, u32>,
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Box<String>`
  |
  = help: the following other types implement trait `Encode`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0,)
            BTreeMap<K, V>
            Container
            Option<T>
          and $N others
  = note: required for `BTreeMap<Box<String>, u32>` to implement `Decode`
